[package]
name = "libffi"
version = "3.0.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]
edition = "2018"

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^2.0"}
abort_on_panic = "2.0.0"
libc = { git = "https://github.com/lewis-revill/libc-cheri", branch = "0.2.135-rustc-patches" }

[features]
complex = []
system = ["libffi-sys/system"]

[package.metadata.docs.rs]
features = ["system"]
